# sandboxgl

./: .gitignore  CMakeLists.txt  README.md  build.sh  object.hpp  sandboxgl.cpp  scene.hpp  sceneManager.cpp  sceneManager.hpp  shader.hpp  shaderLoader.cpp  shaderLoader.hpp  triangle.hpp  utils.cpp  utils.hpp
data/hello/: hello.yaml
